fixed h5 spacing

--- a/public/sass/text.scss
+++ b/public/sass/text.scss
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6{
 h1,h2,h3,h4,h5,h6{
   width: 100%;
   margin: 10px 0 0 0;
-  padding: 15px 0;
+  padding: 15px 0 10px 0;
   color: $black;
   font-weight: bold;
   text-align: center;
@@ -46,6 +46,7 @@ h4{
 }
 
 h5{
+  font-size: 22px;
   margin: 0;
   padding: 0 0 10px 0;
 }
